--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -14,6 +14,12 @@ body {
     background-repeat: no-repeat;
 }
 
+#logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -22,7 +28,7 @@ form {
     padding: 10%;
     width: 40vw;
     max-height: 80vh;
-    gap: 25px;
+    gap: 22px;
     background-color: white opacity 0.5;
     backdrop-filter: blur(10px);
 }
@@ -30,7 +36,7 @@ form {
 form h2 {
     font-size: 3.0em;
     text-align: center;
-    margin: 2% 0;
+    margin: 0 0;
     font-weight: bold;
 }
 
