--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ header {
     transition: transform 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
 
-.header-actions .login {
+.header-actions .login, .header-actions .nome-usuario {
     color: #fff;
     font-size: 1rem;
     text-decoration: none;
