--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -389,6 +389,13 @@ header {
     padding: 4px 12px;
     z-index: 2;
 }
+
+.cardapio-card .bg-pink{
+    background: #F68DD0 !important;
+}
+.cardapio-card .bg-orange{
+    background: #f98407 !important;
+}
 .cardapio-card h3 {
     font-size: 1.2rem;
     font-weight: 700;
@@ -627,4 +634,39 @@ footer::before {
     .footer-links {
         align-items: center;
     }
+}
+
+.qty-control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin-top: 12px;
+}
+
+.qty-btn {
+    width: 42px;
+    height: 42px;
+    background: #292929;
+    color: #fff;
+    border: none;
+    border-radius: 14px;
+    font-size: 26px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.qty-btn:hover {
+    background: #000;
+}
+
+.qty-value {
+    font-size: 20px;
+    font-weight: 700;
+    min-width: 24px;
+    text-align: center;
 }
