--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -30,7 +30,7 @@ form {
     max-height: 80vh;
     gap: 22px;
     background-color: white opacity 0.5;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(16px);
 }
 
 form h2 {
@@ -48,12 +48,21 @@ form .info {
 
 form .info label {
     position: absolute;
-    top: 5px;
+    top: 19px;
     left: 0;
     display: flex;
     transition: 0.5s;
     pointer-events: none;
-    font-size: 2.2em;
+    font-size: 1.2em;
+}
+form .info label {
+    position: absolute;
+    top: 19px;
+    left: 0;
+    display: flex;
+    transition: 011.5s;
+    pointer-events: none;
+    font-size: 1.2em;
 }
 
 form .info input {
